--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "ogl": "^1.0.11",
+    "posthog-js": "^1.311.0",
+    "posthog-node": "^5.18.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "shadcn": "^3.6.2",
